--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ body {
     margin: 0;
     padding: 0;
 }
+
+/* Top player CSS*/
+
 #top_player{
     width:70%;
     margin:0 auto;
@@ -56,6 +59,8 @@ hr {
     background: gray;
     margin-top: 20px;
 }
+
+/* Top blog CSS */
 
 #top_blog{
     width:70%;
@@ -95,6 +100,8 @@ a {
     text-decoration: none;
 
 }
+
+/* Latest Course CSS */
 
 #latest_course {
     padding-top: 30px;
